# Time-Optimal-ZK

./: .gitignore  2022-06-08 Meeting Notes.txt  Cargo.toml  encoding.py  orion-email.txt  test.py
benchmark/: bench.bash  degree.py  degree.txt  lwe-1-rs.txt  lwe-1.txt  lwe-8-rs.txt  lwe-8.txt  lwe.txt  se.py  se.txt  thread-1.txt  thread-8.txt
slides/: final.pptx  midway.pptx
src/: codegen.rs  codespec.rs  commit.rs  commit_zk.rs  encode.rs  fieldspec.rs  helper.rs  lwe.rs  main.rs  merkle.rs  simple_zk.rs
thesis/: abstract.tex  appendix_math.tex  refs.bib  thesis.tex
thesis/chapter/: chapter-brakedown.tex  chapter-conclusion.tex  chapter-impl.tex  chapter-intro.tex  chapter-lwe.tex  chapter-pc.tex  chapter-preliminary.tex  chapter-simple-zkpc.tex  chapter-zklc.tex
thesis/graph/: lc-rev.tikz  lc.tikz  soundness-reduction.tex
