[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { version = "0.12", features = ["derive"] }
ff-derive-num = "0.2.0"
sprs = "0.10"
rand = "0.8.5"
subtle = "2.4.1"
rand_chacha = "0.3.1"
typenum = "1.15.0"
itertools = "0.10.3"
rayon = "1.5.3"
ndarray = ">=0.11.0,<0.15"
num-traits = "0.2.15"
digest = "0.10.3"
blake3 = { version = "1", features = ["traits-preview"] }